# dune_methane_bot

./: .gitignore  README.md  bot.py  config_reader.py  pyproject.toml
keyboards/: __init__.py  for_rolling.py
