[tool.poetry]
name = "dune-methane-bot"
version = "0.1.0"
description = "Bot for tRPG Duna 2d20"
authors = ["Petr Oganin <necroshizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
pydantic-settings = "^2.0.3"
black = "^23.9.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
